Implemented functionality for chat groups