@@ -1,24 +1,6 @@
 #!/bin/bash
 
-# Copyright (C) 2025 Ilias Koukovinis <ilias.koukovinis@gmail.com>
-#
-# This program is free software: you can redistribute it and/or modify
-# it under the terms of the GNU Affero General Public License as
-# published by the Free Software Foundation, either version 3 of the
-# License, or (at your option) any later version.
-# 
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU Affero General Public License for more details.
-# 
-# You should have received a copy of the GNU Affero General Public License
-# along with this program. If not, see <https://www.gnu.org/licenses/>.
-
 # Define variables for folder and file paths
-
-jlink --module-path /usr/share/openjfx/lib  --add-modules java.base,java.desktop,java.logging,java.sql,javafx.controls,javafx.graphics --output custom-runtime --strip-debug --compress=2 --no-header-files --no-man-pages
-
 TARGET_FOLDER="$(git rev-parse --show-toplevel)/ErmisClient/Desktop"
 JAR_FILE="$TARGET_FOLDER/target/ermis-client.jar"
 LIB_FOLDER="$TARGET_FOLDER/target/lib"
